--- a/index.css
+++ b/index.css
@@ -6,17 +6,44 @@ body * {
   font-family: 'Roboto', sans-serif;
 }
 
-h1 {
-  font-size: 2rem;
+body {
+  padding: 2vh 3vw;
 }
 
-
-#addNewBookmark {
+#top-header {
   width: 70%;
+  margin: 6px auto 6px auto;
+}
+
+h1 {
+  font-size: 2rem;
+  text-align: center;
+  padding: 12px 0;
+  background-color: rgb(255, 207, 188);
+}
+
+#filterForm {
+  margin-top: 9px;
+  text-align: right;
+}
+
+#addNewBookmark,
+#viewBookmark,
+#editBookmark {
+  width: 70%;
+  margin: 6px auto;
   border: 4px solid grey;
 }
 
-h2 {
+#infoLine {
+  width: 70%;
+  margin: 6px auto;
+}
+.italicspan {
+  font-style: italic;
+}
+
+h2, h3 {
   font-size: 1.7rem;
   border-bottom: 1px solid black;
   background-color: lightgray;
@@ -27,8 +54,14 @@ h2 {
   line-height: 1.7rem;
 }
 
+.stars {
+  color: green;
+}
 .vertAlignBottom {
   vertical-align: bottom;
+}
+.labeler {
+  font-weight: 600;
 }
 
 input[type="text"],
@@ -37,5 +70,5 @@ textarea {
 }
 
 input[type="radio"] {
-  margin-left: 15px;
+  margin: 0 0 0 15px;
 }
