--- a/index.css
+++ b/index.css
@@ -11,15 +11,21 @@ body {
 }
 
 #top-header {
-  width: 70%;
+  width: 96%;
   margin: 6px auto 6px auto;
 }
 
 h1 {
+  font-family: 'Muli', sans-serif;
   font-size: 2rem;
+  font-weight: 900;
+  font-style: italic;
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 30px blue, 0 0 10px darkblue;
   text-align: center;
   padding: 12px 0;
-  background-color: rgb(255, 207, 188);
+  background-color: rgb(146, 177, 243);
+  border: 3px solid rgb(188, 208, 252);
 }
 
 #filterForm {
@@ -27,40 +33,64 @@ h1 {
   text-align: right;
 }
 
-#addNewBookmark {
-  width: 100%;
-  margin: 12px auto;
-  border: 4px solid grey;
-}
-
-#viewBookmarks,
-#editBookmark {
-  width: 70%;
-  margin: 12px auto;
-  border: 4px solid grey;
-}
-
-.viewBookmarkExpanded {
-  display: none;
-}
-
-#viewFormExpanded {
-  display: none;
-}
-
-#infoLine {
-  width: 70%;
-  background-color: rgb(255, 207, 188); 
-  margin: 6px auto;
-  padding: 6px 12px;
-}
-
 .italicspan {
   font-style: italic;
 }
 
+#viewFormExpanded {
+  padding: 3px 12px;
+}
+
+.formRow {
+  margin-top: 9px;
+  font-weight: 600;
+}
+
+.vertAlignBottom {
+  vertical-align: bottom;
+}
+
+input[type="text"],
+textarea {
+  width: 300px;
+}
+
+input[type="radio"] {
+  margin: 0 0 0 15px;
+}
+
+.addingHead:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#infoLine {
+  width: 96%;
+  background-color: rgb(146, 177, 243);
+  border: 3px solid rgb(188, 208, 252);
+  margin: 6px auto;
+  padding: 6px;
+}
+
+.singleBookmark,
+#editBookmark {
+  width: 96%;
+  margin: 0 auto 9px auto;
+  border: 4px solid grey;
+}
+
+#addNewBookmarkA,
+#addNewBookmarkB {
+  width: 96%;
+  margin: 0px auto;
+  border: 4px solid grey;
+}
+
+.boxHeader:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 h2, h3 {
-  font-size: 1.4rem;
+  font-size: 1rem;
   border-bottom: 1px solid black;
   background-color: lightgray;
   position: relative;
@@ -68,31 +98,42 @@ h2, h3 {
 }
 
 .stars {
-  margin-left: 12%;
+  text-align: right;
+  color: rgb(216, 99, 53);
+  text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
+  position: absolute;
+  right: 12%;
 }
 
 .arrowpointers {
-  font-size: 3rem;
+  font-size: 2.5rem;
   line-height: 1.7rem;
   position: absolute;
   right: 0;
 }
 
-.stars {
-  color: green;
-}
-.vertAlignBottom {
-  vertical-align: bottom;
-}
-.labeler {
-  font-weight: 600;
-}
+@media only screen and (min-width: 600px) {
 
-input[type="text"],
-textarea {
-  width: 360px;
-}
-
-input[type="radio"] {
-  margin: 0 0 0 15px;
+  #top-header {
+    width: 70%;
+  }
+  #addNewBookmarkA,
+  #addNewBookmarkB {
+    width: 70%;
+  }
+  .singleBookmark,
+  #editBookmark,
+  #infoLine {
+    width: 70%;
+  }
+  h2, h3 {
+    font-size: 1.3rem;
+  }
+  .arrowpointers {
+    font-size: 3rem;
+  }
+  input[type="text"],
+  textarea {
+    width: 360px;
+  }
 }
